Fix overflow-x on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,6 +174,11 @@ color: #ededed;
 
 
 @media only screen and (max-width: 576px) {
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+        height:auto!important;
+    }
 .btn{
     font-size: 12px;
     outline: 0;
